<resources>
    <string name="app_name">Parrot</string>
    <string name="default_web_client_id">156797483241-vr4tr2vqv2c9t1lv445f219s2kqnshpk.apps.googleusercontent.com</string>

    <!--BottomBar-->
    <string name="notes">Notas</string>
    <string name="archive">Archivo</string>
    <string name="delete">Papelera</string>

    <!--ContentDescription-->
    <string name="cd_image">Image</string>
    <string name="cd_logout">Logout</string>
    <string name="cd_logo">Logo</string>
    <string name="cd_error">Error</string>
    <string name="cd_success">Success</string>
    <string name="cd_add">Add</string>
    <string name="cd_color">Color</string>
    <string name="cd_archive">Archivar</string>
    <string name="cd_delete">Eliminar</string>
    <string name="cd_back">Back</string>

    <!--HintText-->
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Valida la contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="nickName">Apodo</string>
    <string name="titleNote">Título</string>
    <string name="bodyNote">Nota</string>

    <!--ValidateText-->
    <string name="required">Requerido</string>
    <string name="exactPassword">Las contraseñas deben ser idénticas</string>

    <!--ResponseText-->
    <string name="invalidEmail">Dirección de correo inválido</string>
    <string name="minLengthPassword">Mínimo 8 caracteres</string>
    <string name="maxLengthPassword">Máximo 8 caracteres</string>
    <string name="minUpCasePassword">Debe contener 1 carácter en mayúsculas</string>
    <string name="minLowCasePassword">Debe contener 1 carácter en minúsculas</string>
    <string name="minLengthPhone">Debe contener 9 dígitos</string>
    <string name="invalidPhone">Solo debe contener dígitos</string>

    <!--ButtonText-->
    <string name="buttonAccess">Acceder</string>
    <string name="buttonGoogle">Accede con Google</string>
    <string name="buttonFacebook">Accede con Facebook</string>
    <string name="signUp">¿No tienes una cuenta? Registrate aquí</string>
    <string name="buttonRegister">Registrar</string>

    <!--Titles-->
    <string name="titleRegister">Registro usuario</string>
    <string name="selectColor">Selecciona un color</string>

    <!--DialogAlertErrors-->
    <string name="titleError">Oh no!</string>
    <string name="subTitleErrorSignIn">Se ha producido un error autenticando al usuario, volved a intentarlo más tarde</string>
    <string name="subTitleErrorLogOut">Se ha producido un error deslogeando al usuario, volved a intentarlo más tarde</string>
    <string name="subTitleErrorSignUp">Se ha producido un error creando al usuario, volved a intentarlo más tarde</string>
    <string name="subTitleErrorNoExistNotes">Se ha producido un error, el documento que se intenta buscar no existe</string>
    <string name="subTitleErrorGetNotes">Se ha producido un error al crear la nota, volved a intentarlo más tarde</string>
    <string name="subTitleErrorSaveNotes">Se ha producido un error al guardar la nota, volved a intentarlo más tarde</string>
    <string name="subTitleErrorUpdateNotes">Se ha producido un error al actualizar la nota, volved a intentarlo más tarde</string>
    <string name="subTitleErrorDeleteNotes">Se ha producido un error al eliminar la nota, volved a intentarlo más tarde</string>
    <string name="subTitleErrorSaveUser">Se ha producido un error al guardar el usuario, volved a intentarlo más tarde</string>
    <string name="subTitleErrorDeleteUser">Se ha producido un error al eliminar el usuario, volved a intentarlo más tarde</string>
    <string name="buttonError">Volver a intentar</string>

    <!--DialogAlertSuccess-->
    <string name="titleSuccess">Registro con éxtio</string>
    <string name="subTitleSuccessSignUp">El registro del usuario se ha completado correctamente</string>
    <string name="buttonSuccess">Continuar</string>

    <!--DialogLogout-->
    <string name="dialogLogoutTitle">Cerrar sesión</string>
    <string name="dialogLogoutSubTitle">¿Estás seguro de que quiere cerrar la sesión de su usuario?</string>
    <string name="dialogLogoutButtonYes">CERRAR SESIÓN</string>
    <string name="dialogLogoutButtonCancel">CANCELAR</string>

    <!--DialogDelete-->
    <string name="dialogDeleteTitle">Eliminar nota</string>
    <string name="dialogMultiDeleteTitle">Eliminar notas</string>
    <string name="dialogDeleteSubTitle">¿Estás seguro de que quiere eliminar la nota definitivamente?</string>
    <string name="dialogMultiDeleteSubTitle">¿Estás seguro de que quiere eliminar las notas definitivamente?</string>
    <string name="dialogDeleteButtonYes">ELIMINAR</string>
    <string name="dialogDeleteButtonCancel">CANCELAR</string>

    <!--Text Stats-->
    <string name="TitleEmptyNotes">Sin notas</string>
    <string name="SubtitleEmptyNotes">Empieza a crear notas para no olvidarte nada</string>
    <string name="TitleEmptyArchived">Sin notas archivadas</string>
    <string name="SubtitleEmptyArchived">Tus notas archivadas se mostrarán aquí</string>
    <string name="TitleEmptyDeleted">Papelera vacía</string>
    <string name="SubtitleEmptyDeleted">No hay notas en la papelera</string>

    <!--SnackBar Text-->
    <string name="snackBarTextArchived">Notas archivadas</string>
    <string name="snackBarTextUnArchived">Notas desarchivadas</string>
    <string name="snackBarTextDelete">Notas enviadas a la papelera</string>
    <string name="snackBarTextRestore">Notas restauradas</string>
    <string name="snackBarTextDeleteForever">Notas eliminadas permanentemente</string>
    <string name="snackBarTextUndo">Deshacer</string>
</resources>