<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_wallpaper"
    tools:context=".ui.activities.login.view.LoginActivity">

    <TextView
        android:id="@+id/tvTitleRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/titleRegister"
        android:textSize="26sp"
        android:fontFamily="@font/pacifico"
        android:textColor="@color/onPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/TextInputLayout.Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            style="@style/TextInputEditText.Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNickName"
        style="@style/TextInputLayout.Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        tools:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNickName"
            style="@style/TextInputEditText.Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPhone"
        style="@style/TextInputLayout.Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        tools:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNickName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPhone"
            style="@style/TextInputEditText.Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/TextInputLayout.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            style="@style/TextInputEditText.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRepeatPassword"
        style="@style/TextInputLayout.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textRepeatPassword"
            style="@style/TextInputEditText.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeatPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border_radius_active">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonRegister"
                android:layout_marginBottom="6dp"
                android:textSize="20sp"
                android:textColor="@color/onPrimary"
                android:fontFamily="@font/pacifico"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>