<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="6dp"
                android:text="@string/titleSuccess"
                android:textAlignment="center"
                android:textColor="@color/success"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="48dp"
                android:text="@string/subTitleSuccessSignUp"
                android:textAlignment="center"
                android:textColor="@color/success"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSuccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buttonSuccess"
                android:backgroundTint="@color/success"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        app:cardBackgroundColor="@color/success"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/cd_error"
                android:src="@drawable/ic_close"
                app:tint="@color/background" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>