<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.detail.view.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/onPrimary"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/onPrimary"
            android:contentDescription="@string/cd_back"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnColor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/onPrimary"
            android:contentDescription="@string/cd_archive"
            android:padding="10dp"
            android:src="@drawable/ic_color"
            app:tint="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnArchive" />

        <ImageButton
            android:id="@+id/btnArchive"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/onPrimary"
            android:contentDescription="@string/cd_archive"
            android:padding="10dp"
            android:src="@drawable/ic_archived"
            app:tint="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDelete" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|center"
            android:background="@color/onPrimary"
            android:contentDescription="@string/cd_delete"
            android:padding="10dp"
            android:src="@drawable/ic_deleted"
            app:tint="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDeleteForever"/>

        <ImageButton
            android:id="@+id/btnDeleteForever"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|center"
            android:background="@color/onPrimary"
            android:contentDescription="@string/cd_delete"
            android:padding="10dp"
            android:src="@drawable/ic_delete_forever"
            app:tint="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/tvTitleNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="26sp"
        android:textStyle="bold"
        android:backgroundTint="@color/onPrimary"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:hint="@string/titleNote"/>

    <EditText
        android:id="@+id/tvBodyNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:backgroundTint="@color/onPrimary"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleNote"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/bodyNote" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAdd"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/cd_add"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>